--- a/index.html
+++ b/index.html
@@ -106,151 +106,174 @@
                     <th>Posição</th>
                     <th>Time</th>
                     <th>Jogos</th>
+                    <th>Pontos</th>
                     <th>Vitórias</th>
                     <th>Empates</th>
                     <th>Derrotas</th>
-                    <th>Pontos</th>
                 </tr>
             </thead>
             <tbody id="bundesligaTable">
                 <tr>
-                                       <td>1</td>
+                    <td>1</td>
+                    <td><img src="https://via.placeholder.com/30" alt="Time A Logo"> Time A</td>
+                    <td>10</td>
                     <td class="points"></td>
+                    <td>8</td>
+                    <td>1</td>
+                    <td>1</td>
                 </tr>
                 <tr>
+                    <td>2</td>
+                    <td><img src="https://via.placeholder.com/30" alt="Time B Logo"> Time B</td>
+                    <td>10</td>
+                    <td class="points"></td>
+                    <td>7</td>
+                    <td>2</td>
+                    <td>1</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="https://via.placeholder.com/30" alt="Time C Logo"> Time C</td>
+                    <td>10</td>
+                    <td class="points"></td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>1</td>
+                </tr>
+                                <tr>
                     <td>4</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time D Logo"> Time D</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>5</td>
                     <td>4</td>
                     <td>1</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>5</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time E Logo"> Time E</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>5</td>
                     <td>3</td>
                     <td>2</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>6</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time F Logo"> Time F</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>4</td>
                     <td>4</td>
                     <td>2</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time G Logo"> Time G</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>3</td>
                     <td>5</td>
                     <td>2</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>8</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time H Logo"> Time H</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>3</td>
                     <td>4</td>
                     <td>3</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>9</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time I Logo"> Time I</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>2</td>
                     <td>5</td>
                     <td>3</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>10</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time J Logo"> Time J</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>2</td>
                     <td>4</td>
                     <td>4</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>11</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time K Logo"> Time K</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>1</td>
                     <td>6</td>
                     <td>3</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>12</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time L Logo"> Time L</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>1</td>
                     <td>5</td>
                     <td>4</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>13</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time M Logo"> Time M</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>1</td>
                     <td>3</td>
                     <td>6</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>14</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time N Logo"> Time N</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>1</td>
                     <td>2</td>
                     <td>7</td>
-                    <td class="points"></td>
                 </tr>
-                <tr>
+                                <tr>
                     <td>15</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time O Logo"> Time O</td>
                     <td>10</td>
-                    <td>1</td>
-                                        <td>2</td>
-                    <td>7</td>
                     <td class="points"></td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>7</td>
                 </tr>
                 <tr>
                     <td>16</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time P Logo"> Time P</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>0</td>
                     <td>4</td>
                     <td>6</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>17</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time Q Logo"> Time Q</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>0</td>
                     <td>3</td>
                     <td>7</td>
-                    <td class="points"></td>
                 </tr>
                 <tr>
                     <td>18</td>
                     <td><img src="https://via.placeholder.com/30" alt="Time R Logo"> Time R</td>
                     <td>10</td>
+                    <td class="points"></td>
                     <td>0</td>
                     <td>2</td>
                     <td>8</td>
-                    <td class="points"></td>
                 </tr>
             </tbody>
         </table>
@@ -260,8 +283,8 @@
         function calculatePoints() {
             const rows = document.querySelectorAll('#bundesligaTable tr');
             rows.forEach(row => {
-                const wins = parseInt(row.cells[3].textContent); // Vitórias
-                const draws = parseInt(row.cells[4].textContent); // Empates
+                const wins = parseInt(row.cells[4].textContent); // Vitórias
+                const draws = parseInt(row.cells[5].textContent); // Empates
                 const points = (wins * 3) + (draws * 1); // Cálculo dos pontos
                 row.querySelector('.points').textContent = points; // Atualiza a coluna de pontos
             });
