--- a/index.html
+++ b/index.html
@@ -335,14 +335,9 @@
             </tbody>
         </table>
 
-        <h2>Atual Versão de Transferências do Clube</h2>
+        <h2>Atual Verba de Transferências do Clube</h2>
         <div class="transfer-info">
-            <p>Aqui você pode adicionar informações sobre as transferências mais recentes do clube.</p>
-            <ul>
-                <li>Jogador X transferido de Time Y para Wolfsburg por €ZM em DD/MM/AAAA.</li>
-                <li>Jogador A transferido de Time B para Wolfsburg por €XM em DD/MM/AAAA.</li>
-                <!-- Adicione mais transferências conforme necessário -->
-            </ul>
+            <p> 8.000.000 milhoes de euros </p>
         </div>
     </div>
     <script>
