--- a/index.html
+++ b/index.html
@@ -160,25 +160,25 @@
             <tbody id="bundesligaTable">
                 <tr>
                     <td>1</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time A Logo"> Time A</td>
-                    <td>10</td>
+                    <td><img src="https://images.app.goo.gl/6DLiTrYc3kt3Koy18" alt="Time A Logo"> RB Leipzig</td>
+                    <td>5</td>
                     <td class="points"></td>
-                    <td>8</td>
-                    <td>1</td>
-                    <td>1</td>
+                    <td>5</td>
+                    <td>0</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time B Logo"> Time B</td>
-                    <td>10</td>
+                    <td><img src="https://images.app.goo.gl/xVgmkNmECjKyye127" alt="Time B Logo"> Borussia Dortmund</td>
+                    <td>5</td>
                     <td class="points"></td>
-                    <td>7</td>
-                    <td>2</td>
+                    <td>4</td>
                     <td>1</td>
+                    <td>0</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://via.placeholder.com/30" alt="Time C Logo"> Time C</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" alt="Time C Logo"> Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
