--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             color: #333;
         }
 
+         h2 img {
+            width: 30px; /* Tamanho da logo */
+            height: 30px; /* Tamanho da logo */
+            margin-right: 10px; /* Espaço entre a logo e o texto */
+        }
+
         ul {
             list-style-type: none;
             padding: 0;
