--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
         }
 
         .team img {
-            width: 30px; /* Tamanho da logo */
-            height: 30px; /* Tamanho da logo */
-            margin-right: 10px;
+    width: 40px; /* Ajuste o tamanho da logo aqui */
+    height: 40px; /* Ajuste o tamanho da logo aqui */
+    margin-right: 10px;
+     }
         }
 
         .date {
