--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
             text-align: center;
             color: #333;
         }
-
-         h2 img {
-            width: 30px; /* Tamanho da logo */
-            height: 30px; /* Tamanho da logo */
-            margin-right: 10px; /* Espaço entre a logo e o texto */
-        }
-
+        
         ul {
             list-style-type: none;
             padding: 0;
@@ -167,7 +161,7 @@
             <tbody id="bundesligaTable">
                 <tr>
                     <td>1</td>
-                    <td><img src="https://images.app.goo.gl/6DLiTrYc3kt3Koy18" alt="Time A Logo"> RB Leipzig</td>
+                    <td><img src="https://images.app.goo.gl/6DLiTrYc3kt3Koy18"> RB Leipzig</td>
                     <td>5</td>
                     <td class="points"></td>
                     <td>5</td>
@@ -176,7 +170,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="https://images.app.goo.gl/xVgmkNmECjKyye127" alt="Time B Logo"> Borussia Dortmund</td>
+                    <td><img src="https://images.app.goo.gl/xVgmkNmECjKyye127"> Borussia Dortmund</td>
                     <td>5</td>
                     <td class="points"></td>
                     <td>4</td>
@@ -185,7 +179,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" alt="Time C Logo"> Vfl Wolfsburg</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png"> Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
