--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <body>
     <div class="container">
         <h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png" alt="Logo do Futebol"> WOLFSBURG
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol"> WOLFSBURG
         </h1>
         
     
