--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png"> Vfl Wolfsburg</td>
+                    <td>  <h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol"> </h1> Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
