--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     height: 10px; /* Ajuste o tamanho da logo aqui */
     margin-right: 10px;
      }
-        }
+        
 
         .date {
             color: #555;
@@ -179,8 +179,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>  <h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol"> </h1> Vfl Wolfsburg</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol">  Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
