--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         }
 
         .team img {
-    width: 10px; /* Ajuste o tamanho da logo aqui */
-    height: 10px; /* Ajuste o tamanho da logo aqui */
+    width: 30px; /* Ajuste o tamanho da logo aqui */
+    height: 30px; /* Ajuste o tamanho da logo aqui */
     margin-right: 10px;
      }
         
@@ -170,7 +170,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="https://images.app.goo.gl/xVgmkNmECjKyye127"> Borussia Dortmund</td>
+                    <td><img src="https://w7.pngwing.com/pngs/714/227/png-transparent-borussia-dortmund-bundesliga-fc-bayern-munich-football-uefa-europa-league-football-text-trademark-sport-thumbnail.png"> Borussia Dortmund</td>
                     <td>5</td>
                     <td class="points"></td>
                     <td>4</td>
@@ -179,7 +179,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg" alt="Logo do Futebol">  Vfl Wolfsburg</td>
+                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png">  Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
