--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Logo-VfL-Wolfsburg.svg/1200px-Logo-VfL-Wolfsburg.svg.png">  Vfl Wolfsburg</td>
+                    <td><img src="https://ibb.co/KN0tmZ0">  Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
