--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="https://ibb.co/KN0tmZ0">  Vfl Wolfsburg</td>
+                    <td><img src="https://ssl.gstatic.com/onebox/media/sports/logos/FZnTSH2rbHFos4BnlWAItw_64x64.png">  Vfl Wolfsburg</td>
                     <td>10</td>
                     <td class="points"></td>
                     <td>6</td>
